# chucks-wisdom

./: .gitignore  Dockerfile  Dockerfile.db  Dockerfile.web  app.py  docker-compose.yaml  importer.py  joke_importer.py  pyproject.toml  reader.py
chucks_wisdom/sql_storage/sql_scripts/: create.sql  docker-compose.yml
chucks_wisdom/sqlite_storage/: sqlite.db
chucks_wisdom/sqlite_storage/sql_scripts/: create.py
k8s_config/: chuck-namespace.yaml
k8s_config/importer/: importer-configmap.yaml  importer-deployment.yaml  importer-service.yaml
k8s_config/metrics/: importer-metrics-dashboard.json  metrics-service-monitor.yaml  metrics-service.yaml
k8s_config/postgres/: postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml
k8s_config/reader/: reader-deployment.yaml  reader-ingress.yaml  reader-service.yaml
src/api_request/: api_request.py
src/sqlite_storage/sql_scripts/: create.py
