[tool.poetry]
name = "chucks_wisdom"
version = "1.0.0"
description = "Silly project to work with an API, SQL, Kafka, and maybe Open Telemetry"
authors = ["Patrick White <whitep@alumni.vcu.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.2.0"
requests = "^2.32.3"
flask = "^3.1.0"
structlog = "^25.2.0"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.masonry.api"
